samples/_failures_safe/1761473739_ac6647_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bf8b991.c: In function ‘main’:
./samples/SAFE/__tmp_9bf8b991.c:166:20: error: missing terminating " character
  166 |             printf("Invalid edge format
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9bf8b991.c:166:13: error: expected expression at end of input
  166 |             printf("Invalid edge format
      |             ^~~~~~
./samples/SAFE/__tmp_9bf8b991.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9bf8b991.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9bf8b991.c:166:13: error: expected declaration or statement at end of input
